ci: update error pages

--- a/.config/error-pages/503.html
+++ b/.config/error-pages/503.html
@@ -50,7 +50,7 @@
         </div>
     </div>
     <div class="error_subtitle">
-        MISSED APPROACH
+        GOING AROUND
     </div>
     <div class="error_text">
         VATSIM Radar is most likely updating. This may take a few minutes.<br>
